standards/gnds-2.0-alpha/alpha/c/src/v2.0/common/EndfCompatible.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// EndfCompatible is the basic handle type in this file. Example:
//    // Create a default EndfCompatible object:
//    EndfCompatible handle = EndfCompatibleDefault();
// Functions involving EndfCompatible are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_ALPHA_V2_0_COMMON_ENDFCOMPATIBLE
#define C_INTERFACE_ALPHA_V2_0_COMMON_ENDFCOMPATIBLE

#include "GNDStk.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct EndfCompatibleClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ EndfCompatible
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct EndfCompatibleClass *EndfCompatible;

// --- Const-aware handles.
typedef const struct EndfCompatibleClass *const ConstHandle2ConstEndfCompatible;
typedef       struct EndfCompatibleClass *const ConstHandle2EndfCompatible;
typedef const struct EndfCompatibleClass *      Handle2ConstEndfCompatible;
typedef       struct EndfCompatibleClass *      Handle2EndfCompatible;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstEndfCompatible
EndfCompatibleDefaultConst();

// +++ Create, default
extern_c Handle2EndfCompatible
EndfCompatibleDefault();

// --- Create, general, const
extern_c Handle2ConstEndfCompatible
EndfCompatibleCreateConst();

// +++ Create, general
extern_c Handle2EndfCompatible
EndfCompatibleCreate();

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
EndfCompatibleAssign(ConstHandle2EndfCompatible This, ConstHandle2ConstEndfCompatible from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
EndfCompatibleDelete(ConstHandle2ConstEndfCompatible This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
EndfCompatibleRead(ConstHandle2EndfCompatible This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
EndfCompatibleWrite(ConstHandle2ConstEndfCompatible This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
EndfCompatiblePrint(ConstHandle2ConstEndfCompatible This);

// +++ Print to standard output, as XML
extern_c int
EndfCompatiblePrintXML(ConstHandle2ConstEndfCompatible This);

// +++ Print to standard output, as JSON
extern_c int
EndfCompatiblePrintJSON(ConstHandle2ConstEndfCompatible This);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/common/EndfCompatible/src/custom.h"

#undef extern_c
#endif